..F....... [ZBXNEXT-1113] redesign Configuration->Host->Discovery rules (Eduard)
..F....... [ZBXNEXT-1107] redesign Configuration->Audit (Eduard)
....I..PS. [ZBX-2604] added processing of not supported items monitored by a proxy (Sasha)
..F....... [ZBXNEXT-903] redesign Configuration->Items (Eduard)
..F....... [ZBXNEXT-909] redesign Configuration->Discovery (Eduard)

Bug fixes:
A.F....... [ZBX-4333] fixed trigger inheritance when calling trigger.update whithout a trigger expression (Pavels)
..F....... [ZBX-4333] fixed host trigger mass update (Pavels)
..F....... [ZBX-4333] fixed trigger dependency copying (Pavels)
.......S.. [ZBX-4629] fixed processing Y axis min/max values for graph prototypes (Sasha)
..F....... [ZBX-4641] fixed errors in a "Discovery checks" popup (Sasha)
A.F....... [ZBX-4202] fixed SQL performance in tr_status.php - combined similar queries, user data SQL access only once, triggerids retrieval optimization (Toms)
A.F....... [ZBX-4647] fixed trigger and item prototype inheritance (Pavels)
..F....... [ZBX-4467] fixed the ZBX_MAX_PERIOD constant not affecting the timebar control (Pavels)
A......... [ZBX-4562] Fixed meditype.update returning wrong formatted result (Toms)
..F....... [ZBX-4187] fixed dashbord fonts on popup. fixed js error on last 20 issues (Toms)
A.F....... [ZBX-4607] fixed the script.getscriptbyhosts method returning scripts from nodes defferent from hosts (Pavels)
A.F....... [ZBX-4607] fixed the script "Host groups" parameter (Pavels)
A......... [ZBX-4607] fixed the script.get methods "selectHosts" and "selectGroups" options (Pavels)
..F....... [ZBX-4607] fixed new ID generation in DM setup (Pavels)
..F....... [ZBX-4253] fixed menu link inconsistency in tr_status.php (Toms)
..F....... [ZBX-4554] fixed ordering (Toms)
..F....... [ZBX-4295] fixed icons ending outside map. Removed icon resizing responsible for infinite loop (Toms)
..F....... [ZBX-4296] fixed popup menu unavailable for disabled hosts (Toms)