@@ -25,10 +25,14 @@ class CProfile {
 	private static $profiles = null;
 	private static $update = array();
 	private static $insert = array();
+	private static $stringProfileMaxLength;
 
 	public static function init() {
 		self::$userDetails = CWebUser::$data;
 		self::$profiles = array();
+
+		$profilesTableSchema = DB::getSchema('profiles');
+		self::$stringProfileMaxLength = $profilesTableSchema['fields']['value_str']['length'];
 
 		$db_profiles = DBselect(
 			'SELECT p.*'.
@@ -191,6 +195,8 @@ class CProfile {
 				return zbx_ctype_digit($value);
 			case PROFILE_TYPE_INT:
 				return zbx_is_int($value);
+			case PROFILE_TYPE_STR:
+				return zbx_strlen($value) <= self::$stringProfileMaxLength;
 			default:
 				return true;
 		}
@@ -343,10 +349,14 @@ function get_user_history() {
 
 	for ($i = 1; $i < 6; $i++) {
 		if (defined($history['title'.$i])) {
-			$url = new CLink(constant($history['title'.$i]), $history['url'.$i], 'history');
-			array_push($result, array(SPACE, $url, SPACE));
-			array_push($result, $delimiter);
+			$title = constant($history['title'.$i]);
 		}
+		else {
+			$title = $history['title'.$i];
+		}
+		$url = new CLink($title, $history['url'.$i], 'history');
+		array_push($result, array(SPACE, $url, SPACE));
+		array_push($result, $delimiter);
 	}
 	array_pop($result);
 	return $result;
@@ -370,6 +380,12 @@ function add_user_history($page) {
 	}
 	else {
 		$url = $page['file'];
+	}
+
+	// if url length is greater than db field size, skip history update
+	$historyTableSchema = DB::getSchema('user_history');
+	if (zbx_strlen($url) > $historyTableSchema['fields']['url5']['length']) {
+		return false;
 	}
 
 	$history5 = DBfetch(DBSelect(
